[workspace]
resolver = "2"
members = [
    "inference-engine",
    "inference-api",
    "inference-backend",
    "inference-model-gemma", "inference-model-common", "inference-model-qwen",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1   # faster compile than opt-level=0; debug asserts remain active
