[package]
name = "inference-api"
version = "0.1.0"
edition = "2021"

[dependencies]
inference-engine = { path = "../inference-engine" }
inference-backend = { path = "../inference-backend", features = ["candle"] }
burn = { version = "0.16", features = ["ndarray"] }
inference-model-common = { path = "../inference-model-common" }
inference-model-gemma = { path = "../inference-model-gemma" }
inference-model-qwen = { path = "../inference-model-qwen" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
async-stream = "0.3"
futures = "0.3"
parking_lot = "0.12"

[dev-dependencies]
axum-test = "20"
