[package]
name = "inference-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = "0.16"
burn-wgpu = { version = "0.16", optional = true }
tokio = { version = "1", features = ["sync"] }
thiserror = "2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
inference-model-common = { path = "../inference-model-common" }
inference-model-gemma = { path = "../inference-model-gemma" }
inference-model-qwen = { path = "../inference-model-qwen" }

[features]
wgpu = ["dep:burn-wgpu"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:serde", "dep:serde_json"]
